<resources>
    <string name="app_name">TestApplication</string>

    <!-- MainActivity -->
    <string name="main_default_textView">클릭 이벤트</string>
    <string name="main_button">버튼</string>
    <string name="main_textView_0">Color : main</string>
    <string name="main_textVIew_1">Color : grey</string>
    <string name="main_change">화면 전환</string>

    <!-- Edit Text -->
    <string name="edit_text_title">회원가입</string>
    <string name="edit_text_name">이름</string>
    <string name="edit_text_birth">생년월일</string>
    <string name="edit_text_phone">휴대폰 번호</string>
    <string name="edit_text_email">이메일</string>
    <string name="edit_text_name_hint">이름을 입력해주세요</string>
    <string name="edit_text_birth_hint">생년월일(YYYYMMDD)</string>
    <string name="edit_text_phone_hint">휴대폰 번호를 입력해주세요</string>
    <string name="edit_text_email_hint">이메일을 입력해주세요</string>
    <string name="edit_text_email_num_hint">이메일 인증번호</string>
    <string name="edit_text_local">내국인</string>
    <string name="edit_text_foreigner">외국인</string>
    <string name="edit_text_male">남</string>
    <string name="edit_text_female">여</string>
    <string name="edit_text_direct_input">직접입력</string>
    <string name="edit_text_auth_req">인증요청</string>
    <string name="edit_text_next">다음</string>
    
    <!-- NestedScrollView -->
    <string name="nested_title">친구</string>
    <string name="nested_subtitle">RecyclerView &amp; NestedScrollView 실습</string>
    <string name="nested_new_friend">새로운 친구</string>

</resources>