<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/edit_text_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="22dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="46dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_text_title"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:fontFamily="@font/notosans_medium_ttf"/>

        <Button
            android:id="@+id/edit_text_close_button"
            android:layout_width="30dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_close"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_name"
            android:textColor="@color/text_default_2"
            android:textSize="12sp"
            android:fontFamily="@font/notosans_regular_ttf"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/login_main_edittext"
                android:hint="@string/edit_text_name_hint"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:fontFamily="@font/notosans_regular_ttf"
                android:paddingStart="12dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/bg_spinner"
                android:outlineProvider="none" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_birth"
            android:textColor="@color/text_default_2"
            android:textSize="12sp"
            android:fontFamily="@font/notosans_regular_ttf"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/login_main_edittext"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_text_birth_hint"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_regular_ttf"
            android:paddingStart="12dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_phone"
            android:textColor="@color/text_default_2"
            android:textSize="12sp"
            android:fontFamily="@font/notosans_regular_ttf"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/login_main_edittext"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_text_phone_hint"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_regular_ttf"
            android:paddingStart="12dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_email"
            android:textColor="@color/text_default_2"
            android:textSize="12sp"
            android:fontFamily="@font/notosans_regular_ttf"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_main_edittext"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_text_email_hint"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_regular_ttf"
            android:paddingStart="12dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_main_edittext"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_text_email_num_hint"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosans_regular_ttf"
            android:paddingStart="12dp"
            android:textColor="@color/black"/>

    </LinearLayout>





</LinearLayout>