<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nested_title"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:fontFamily="@font/notosans_medium_ttf"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@color/key_notice"
                android:text="@string/nested_subtitle"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/text_default_2"
                android:fontFamily="@font/notosans_medium_ttf"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_friend_division"
                android:paddingStart="16dp"
                android:text="@string/nested_new_friend"
                android:gravity="center_vertical"
                android:fontFamily="@font/notosans_regular_ttf"
                android:textColor="@color/text_default_2"
                android:includeFontPadding="false"
                android:textSize="14sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nested_recyclerView_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:overScrollMode="never"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_friend_division"
                android:paddingStart="16dp"
                android:text="@string/nested_title"
                android:gravity="center_vertical"
                android:fontFamily="@font/notosans_regular_ttf"
                android:textColor="@color/text_default_2"
                android:includeFontPadding="false"
                android:textSize="14sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nested_recyclerView_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>





</LinearLayout>